--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@ package-lock.json
 # Misc
 _sass/vendors
 assets/js/dist
+
+# MyIgnore
+_posts/2019-08-08-text-and-typography.md
+_posts/2019-08-08-write-a-new-post.md
+_posts/2019-08-09-getting-started.md
+_posts/2019-08-11-customize-the-favicon.md
+_posts/2025-01-02-welcome-to-jekyll.markdown
