--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Data & AI Lover # the main title
+title: DS2Man # the main title
 
-tagline: Data와 AI를 좋아하는 평범한 엔지니어 # it will display as the subtitle
+tagline: An ordinary engineer who loves Data and AI # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   AI Engineer, Data Scientist, Blog
@@ -88,7 +88,7 @@ pageviews:
 #     light — Use the light color scheme
 #     dark — Use the dark color scheme
 #
-theme_mode: # [light | dark]
+theme_mode: dark # [light | dark]
 
 # The CDN endpoint for media resources.
 # Notice that once it is assigned, the CDN url
