--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ _sass/vendors
 assets/js/dist
 
 # MyIgnore
+_posts/.obsidian
+_posts/Welcome.md
 _posts/2019-08-08-text-and-typography.md
 _posts/2019-08-08-write-a-new-post.md
 _posts/2019-08-09-getting-started.md
