--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,5 @@ _posts/2019-08-08-write-a-new-post.md
 _posts/2019-08-09-getting-started.md
 _posts/2019-08-11-customize-the-favicon.md
 _posts/2025-01-02-welcome-to-jekyll.markdown
+_posts/2025-01-05-LLM-Langchain
 zMyCmd.txt
