--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ _posts/2019-08-09-getting-started.md
 _posts/2019-08-11-customize-the-favicon.md
 _posts/2025-01-02-welcome-to-jekyll.markdown
 zMyCmd.txt
+
+
+_posts/2025-01-04-LLM-Prologue.md
+images/DS2Man.png
+images/ollama1.png
