--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,5 @@ _posts/2025-01-02-welcome-to-jekyll.markdown
 zMyCmd.txt
 
 
-images/DS2Man.png
-images/ollama1.png
+assets/img/DS2Man.png
+assets/img/ollama1.png
