--- a/.gitignore
+++ b/.gitignore
@@ -27,14 +27,9 @@ _sass/vendors
 assets/js/dist
 
 # MyIgnore
-_posts/Article_pre-work_folder
+_posts/zReference_md
+_posts/zArticle_pre-work_folder
 _posts/.obsidian
-_posts/Welcome.md
-_posts/2019-08-08-text-and-typography.md
-_posts/2019-08-08-write-a-new-post.md
-_posts/2019-08-09-getting-started.md
-_posts/2019-08-11-customize-the-favicon.md
-_posts/2019-09-02-welcome-to-jekyll.markdown
 zMyCmd.txt
 
 
