--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: 장용철
+  name: DS2Man(장용철)
   email: jaoneol@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
