--- a/_config.yml
+++ b/_config.yml
@@ -153,6 +153,10 @@ paginate: 10
 # The base URL of your site
 baseurl: ""
 
+# 20240408 sitemap 위한 plugin 추가
+plugins:
+  - jekyll-sitemap
+
 # ------------ The following options are not recommended to be modified ------------------
 
 kramdown:
