--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://jaoneol.github.io"
+url: "https://ds2man.github.io"
 
 github:
-  username: jaoneol # change to your GitHub username
+  username: ds2man # change to your GitHub username
 
 # twitter:
 #   username: twitter_username # change to your Twitter username
@@ -39,7 +39,7 @@ social:
   links:
     # The first element serves as the copyright owner's link
     # - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/jaoneol # change to your GitHub homepage
+    - https://github.com/ds2man # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     - https://www.linkedin.com/in/ds2man/
